Asciidoctor lazy loading